[project]
name = "langgraph-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckduckgo-search>=6.4.1",
    "ipython>=8.30.0",
    "langchain-anthropic>=0.3.0",
    "langchain-community>=0.3.11",
    "langchain-ollama>=0.2.1",
    "langgraph>=0.2.59",
    "ollama>=0.4.4",
    "tavily-python>=0.5.0",
]
